--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
+ "jest": {
+  "preset": "react-native",
+  "setupFilesAfterEnv": [
+    "@testing-library/jest-native/extend-expect"
+  ],
+  "transformIgnorePatterns": [
+    "node_modules/(?!(@react-native|react-native|@react-navigation|@reduxjs/toolkit|react-redux|immer)/)"
+  ]
+},
+
   "dependencies": {
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
